tests/fixtures/invalid/none_div_int.py
# Cannot divide None and Int
x: float = None / 1
